--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         </style>
     </head>
     <body>
-        <script src="https://d3js.org/d3.v5.min.js"></script>
+        <script src="https://d3js.org/d3-dsv.v1.min.js"></script>
+        <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
         <script type="text/javascript">
             Promise.all(
                 [2020, 2019, 2018, 2017, 2016].map((year, index) => d3.csv(`${year}.csv`))
