--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
         <title>Books</title>
         <style type="text/css">
             html { font-family: Menlo, monospace }
+            .Year { padding-right: 1rem }
         </style>
     </head>
     <body>
         <script src="https://d3js.org/d3-dsv.v1.min.js"></script>
         <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
         <script type="text/javascript">
+            const YEARS = [2020, 2019, 2018, 2017, 2016]
+            const COLUMNS = ['Year', 'Title', 'Author']
             Promise.all(
-                [2020, 2019, 2018, 2017, 2016].map((year, index) => d3.csv(`${year}.csv`))
+                YEARS.map(year => {
+                    return new Promise((resolve) => {
+                        d3.csv(`${year}.csv`)
+                            .then(rows => {
+                                resolve({year, rows})
+                            })
+                    })
+                })
             )
+                .then(years => {
+                    return years.map(year => {
+                        return year.rows.map(row => {
+                            row.Year = year.year
+                            return row
+                        })
+                    })
+                })
                 .then(years => years.map(year => year.reverse()))
                 .then(years => years.flat())
                 .then(rows => {
@@ -22,9 +40,10 @@
 
                     rows.forEach(row => {
                         const tr = table.insertRow(-1)
-                        Object.values(row).map(cell => {
+                        COLUMNS.forEach(key => {
                             const td = tr.insertCell(-1)
-                            td.innerText = cell
+                            td.innerText = row[key]
+                            td.classList.add(key)
                         })
                     })
 
