Consistent table sizing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
         <title>Books</title>
         <style type="text/css">
             html { font-family: Menlo, monospace }
-            .Year { padding-right: 1rem }
+            table {
+                width: 100%;
+                border-collapse: collapse;
+                table-layout: fixed;
+            }
+            tr td:nth-child(1) {
+                width: 5%
+            }
+            tr td:nth-child(2) {
+                width: 70%
+            }
+            tr td:nth-child(3) {
+                width: 25%
+            }
         </style>
     </head>
     <body>
