--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Books</title>
         <style type="text/css">
-            html { font-family: Menlo, monospace }
+            html,
+            input {
+                font-family: Menlo, monospace;
+                font-size: 16px;
+            }
+            .sr-hidden {
+                clip: rect(1px, 1px, 1px, 1px);
+                clip-path: inset(50%);
+                height: 1px;
+                width: 1px;
+                margin: -1px;
+                overflow: hidden;
+                padding: 0;
+                position: absolute;
+            }
+            header {
+                display: flex;
+                align-items: center;
+            }
+            input[name=filter] {
+                margin-left: 2rem;
+            }
             table {
                 width: 100%;
                 border-collapse: collapse;
@@ -23,6 +44,11 @@
         </style>
     </head>
     <body>
+        <header>
+            <h1>Books read since 2016</h1>
+            <label for="filter" class="sr-hidden">Filter books</label>
+            <input type="search" name="filter" placeholder="Filter" style="display: none">
+        </header>
         <script src="https://d3js.org/d3-dsv.v1.min.js"></script>
         <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
         <script type="text/javascript">
@@ -60,7 +86,30 @@
                         })
                     })
 
+                    const filter = document.querySelector('input[name=filter]')
+                    filter.value = ''
+
+                    filter.addEventListener('keyup', ({ target: { value } }) => {
+                        if (value.trim() === '') {
+                            table.querySelectorAll('tr').forEach(tr => {
+                                tr.removeAttribute('style')
+                            })
+                            return
+                        }
+
+
+                        table.querySelectorAll('tr').forEach(tr => {
+                            const isVisible = [...tr.querySelectorAll('td')]
+                                .find(td => {
+                                    return td.innerText.toLowerCase()
+                                        .includes(value.toLowerCase())
+                                })
+                            tr.style.display = !isVisible ? 'none' : ''
+                        })
+                    })
+
                     document.body.appendChild(table)
+                    filter.removeAttribute('style')
                 })
         </script>
     </body>
