--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <script src="https://d3js.org/d3-dsv.v1.min.js"></script>
         <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
         <script type="text/javascript">
-            const YEARS = [2020, 2019, 2018, 2017, 2016]
+            const YEARS = [2021, 2020, 2019, 2018, 2017, 2016]
             const COLUMNS = ['Year', 'Title', 'Author']
             Promise.all(
                 YEARS.map(year => {
