I forgot to make it display: grid

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             }
             tbody,
             tr {
-                display: table;
+                display: grid;
             }
             tr {
-                grid-template-columns: 1fr 4fr 2fr;
+                grid-template-columns: 1fr 5fr 3fr;
             }
             td {
                 padding: 0.25rem 0.5rem;
