Stripe-y for readability

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             tr {
                 grid-template-columns: 1fr 5fr 3fr;
             }
+            tr:nth-child(odd) {
+                background-color: #eee;
+            }
             td {
                 padding: 0.25rem 0.5rem;
             }
