make the html pretty

--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
                 </tr>
             </thead>
             <tbody>
-                {% assign current_year = 2025 %}
-                {% assign years = (1998..current_year) | reverse %}
-                {% for year in years %}
-                    {% assign year_str = year | escape %}
-                    {% for book in site.data[year_str] %}
-                        <tr>
-                            <td>{{ year }}</td>
-                            <td>{{ book.Title }}</td>
-                            <td>{{ book.Author }}</td>
-                        </tr>
-                    {% endfor %}
-                {% endfor %}
+{%- assign current_year = 2025 -%}
+{%- assign years = (1998..current_year) | reverse -%}
+{% for year in years %}
+    {%- assign year_str = year | escape -%}
+    {% for book in site.data[year_str] %}
+                <tr>
+                    <td>{{ year }}</td>
+                    <td>{{ book.Title }}</td>
+                    <td>{{ book.Author }}</td>
+                </tr>
+    {%- endfor -%}
+{% endfor %}
             </tbody>
         </table>
     </body>
