Make the thead sticky

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 border-collapse: collapse;
                 table-layout: fixed;
             }
+            thead {
+                position: sticky;
+                top: 0;
+            }
             thead,
             tbody,
             tr {
